--- a/frontend-vite/index.html
+++ b/frontend-vite/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student AI Web</title>
+    <title>학생 AI 웹</title>
+    <meta name="theme-color" content="#6c5ce7" />
+    <link rel="stylesheet" href="/student/src/styles.css" />
   </head>
   <body>
     <div id="root"></div>
